# setuptools-cuda-cpp

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/cpp_example/: pyproject.toml  setup.py
examples/cpp_example/build_for_setuptools_61.0.0+/: pyproject.toml  setup.py
examples/cpp_example/src/my_cpp_app/: __init__.py
examples/cpp_example/src/my_cpp_package/: __init__.py
examples/cuda_example/: pyproject.toml  setup.py
examples/cuda_example/build_for_setuptools_61.0.0+/: pyproject.toml  setup.py
examples/cuda_example/src/my_cuda_app/: __init__.py  cudaext_wrapper.cpp
examples/cuda_example/src/my_cuda_package/: __init__.py
examples/cuda_example/src/my_cuda_package/cuda_ext/: CMakeLists.txt  cuda_ext.cu  cuda_ext_wrapper.cpp  main.cpp
examples/cuda_example/src/my_cuda_package/cuda_ext/include/: cuda_ext.cuh
examples/cuda_example/src/my_cuda_package/cudaest/: cudaext.cu  main.cpp
examples/cuda_example/src/my_cuda_package/cudaest/include/: cudaext.cuh
src/setuptools_cpp_cuda/: __init__.py  build_ext.py  extension.py  find_cuda.py  ninja_build.py  nvml.py  utils.py
src/setuptools_cuda_cpp/: __init__.py  build_ext.py  extension.py  find_cuda.py  ninja_build.py  nvml.py  utils.py
tests/: test.py  test_my_cuda_package.py
tools/: clean.bat  clean.sh
